--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>welcome to the club
+    harshu hungama
+      bhagi bhajana
+      sravani sathkaram
+      chandu chamathkaram
+    </h1>
   </main>
 </body>
 
