--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,7 @@
 
 <body>
   <main>
-    <h1>welcome to the club
-      harshu hungama
-      bhagi bhajana
-      sravani sathkaram
-      chandu chamathkaram
-    </h1>
+    <h1>welcome to the club </h1>
   </main>
 </body>
 
