--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>fab4</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  href=https://mango-ground-02bce0910.2.azurestaticapps.net
-</head>
-
-
+<html>
 <body>
-  <main>
-    <h1>welcome to the club </h1>
-  </main>
-</body>
 
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
 </html>
