--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <title>fab4</title>
 <body>
 
 <h1>welcome to club</h1>
-<p>My first paragraph.</p>
-
-</body>
+  <p>be on swing </p>
+  </body>
 </html>
