--- a/src/index.html
+++ b/src/index.html
@@ -1,117 +1,63 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<title>
-		FAB4-develop
-	</title>
-</head>
-
-<body>
-	<nav class="navbar background">
-		<ul class="nav-list">
-			<div class="logo">
-				<img src="logo.png">
-			</div>
-			<li><a href="#web">Web Technology</a></li>
-			<li><a href="#program">C Programming</a></li>
-			<li><a href="#course">Courses</a></li>
-		</ul>
-
-		<div class="rightNav">
-			<input type="text" name="search" id="search">
-			<button class="btn btn-sm">Search</button>
-		</div>
-	</nav>
-
-	<section class="firstsection">
-		<div class="box-main">
-			<div class="firstHalf">
-				<h1 class="text-big" id="web">
-					Web Technology
-				</h1>
-				
-				<p class="text-small">
-					HTML stands for HyperText Markup
-					Language. It is used to design
-					web pages using a markup language.
-					HTML is the combination of Hypertext
-					and Markup language. Hypertext
-					defines the link between the web
-					pages. A markup language is used
-					to define the text document within
-					tag which defines the structure of
-					web pages. HTML is a markup language
-					that is used by the browser to
-					manipulate text, images, and other
-					content to display it in the required
-					format.
-				</p>
-
-
-			</div>
-		</div>
-	</section>
-
-	<section class="secondsection">
-		<div class="box-main">
-			<div class="secondHalf">
-				<h1 class="text-big" id="program">
-					C Programming
-				</h1>
-				<p class="text-small">
-					C is a procedural programming language.
-					It was initially developed by Dennis
-					Ritchie as a system programming
-					language to write operating system.
-					The main features of C language include
-					low-level access to memory, simple set
-					of keywords, and clean style, these
-					features make C language suitable for
-					system programming like operating system
-					or compiler development.
-				</p>
-
-
-			</div>
-		</div>
-	</section>
-
-	<section class="section">
-		<div class="paras">
-			<h1 class="sectionTag text-big">Java</h1>
-
-			<p class="sectionSubTag text-small">
-				Java has been one of the most
-				popular programming language
-				for many years. Java is Object
-				Oriented. However it is not
-				considered as pure object oriented
-				as it provides support for primitive
-				data types (like int, char, etc) The
-				Java codes are first compiled into byte
-				code (machine independent code). Then
-				the byte code is run on Java Virtual
-				Machine (JVM) regardless of the
-				underlying architecture.
-			</p>
-
-
-		</div>
-
-		<div class="thumbnail">
-			<img src="img.png" alt="laptop image">
-		</div>
-	</section>
-
-	<footer class="background">
-		<p class="text-footer">
-			Copyright ©-All rights are reserved
-		</p>
-
-
-	</footer>
-</body>
-
+  <head>
+    <title>CLOUD 4 food</title>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to My Food Website</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#affordable food places">affordable food places</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About Us</h2>
+        <p>We are a friends-owned restaurant that has been serving delicious food . Our website main approach  is for students .</p>
+      </section>
+      <section id="menu">
+        <h2>affordable food places</h2>
+        <ul>
+          <li>
+            <h3>Appetizers</h3>
+            <ul>
+              <li>Bruschetta</li>
+              <li>Caprese Salad</li>
+              <li>Fried Calamari</li>
+            </ul>
+          </li>
+          <li>
+            <h3>Main Courses</h3>
+            <ul>
+              <li>Spaghetti Carbonara</li>
+              <li>Chicken Parmesan</li>
+              <li>Veal Marsala</li>
+            </ul>
+          </li>
+          <li>
+            <h3>Desserts</h3>
+            <ul>
+              <li>Tiramisu</li>
+              <li>Cannoli</li>
+              <li>Gelato</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <p>123 Main Street<br>
+           Anytown, USA<br>
+           Phone: 555-555-5555<br>
+           Email: info@myfoodwebsite.com</p>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 My Food Website</p>
+    </footer>
+  </body>
 </html>
